--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -6,6 +6,7 @@
             <title>JB-CONSTRUCTORES</title>
             <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
             <link rel="stylesheet" href="../assets/css/style.css">
+            <data></data>
             <script src="https://cdn.tailwindcss.com"></script>
         </head>
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block " style="width: 14rem; background-color: rgb(6, 30, 23);">
@@ -50,6 +51,7 @@
                         <span>Reseñas y Calificaciones</span>
                     </div>
                 </a>
+            </div>
             </div>
 
 
