--- a/Paginas/inicioSesion.html
+++ b/Paginas/inicioSesion.html
@@ -14,6 +14,10 @@
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center relative">
+    <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
+  ☰
+</button>
+
     <main class="flex-1 overflow-y-auto p-6 bg-gray-100 w-full flex items-center justify-center relative z-10">
         <div class="w-full">
             <div class="mb-6">
