--- a/Paginas/moderacionResenas.html
+++ b/Paginas/moderacionResenas.html
@@ -17,6 +17,9 @@
 <body class="bg-gray-50">
     <!-- Sidebar -->
     <div class="flex h-screen">
+            <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
+      ☰
+  </button>
         <div class="sidebar bg-black text-white w-64 px-4 py-6 hidden md:block">
             <div class="flex items-center justify-center mb-8">
                 <img src="https://example.com/logo.png" alt="Logo JB Constructores" class="h-10">
