--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -15,6 +15,13 @@
     </style>
 </head>
 <body class="bg-gray-50 relative">
+  </button>
+        <div class="flex h-screen">
+            <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
+                ☰
+            </button>
+            
+            <!-- Main content -->
     <main class="flex-1 overflow-y-auto p-6 bg-gray-100 relative z-10">
         <div class="mb-6 flex flex-col items-center justify-center text-center">
             <h2 class="text-2xl font-semibold text-gray-800">Registro de Usuario</h2>
