--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -17,6 +17,10 @@
 </head>
 <body class="bg-gray-50">
     <div class="flex h-screen">
+        <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
+  ☰
+</button>
+
         <div id="sidebar-container"></div> <!-- Aquí insertamos el sidebar -->
         <!-- Main content -->
         <div class="flex-1 flex flex-col overflow-hidden">
