--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       /* Estilo pestañas nav */
       .tabs {
         display: flex;
-        gap: 2rem;
-        border-bottom: 3px solid #761f26;
+        gap: 1rem;
+        border-bottom: 3px solid #161a7e;
         margin-top: 0.5rem;
         margin-bottom: 1rem;
+        border-top:3px solid #161a7e;
       }
       .tabs button {
-        padding: 0.5rem 1rem;
+        padding: 0.2rem 1rem;
         font-weight: 500;
         color: #4a4a4a;
         background: transparent;
@@ -67,6 +68,12 @@
       <!-- Botones -->
       <div class="flex flex-row space-x-2 mt-3 sm:mt-0 w-full sm:w-auto justify-center sm:justify-end" 
            style="white-space: nowrap; min-width: 100px; margin-top: 1rem;">
+
+        <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 left-4 z-50 md:hidden" style="margin-top: -10px;">
+          ☰
+        </button>
+
+
         <button onclick="window.location.href='Paginas/inicioSesion.html'" 
           class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200">
           Iniciar sesión
@@ -81,10 +88,10 @@
 </header>
 
       <!-- Navegación pestañas -->
-      <nav class="tabs px-6" style="margin-top: 1rem; font-size: 17px;">
+      <nav class="tabs px-6" style="margin-top: 1rem; font-size: 17px; margin-top: 0.5rem;">
         <button class="active" data-tab="obra-negra">Obra Negra</button>
-        <button class="active" data-tab="obra-blanca">Obra Blanca</button>
-        <button class="active" data-tab="mantenimiento">Mantenimiento</button>
+        <button data-tab="obra-blanca">Obra Blanca</button>
+        <button data-tab="mantenimiento">Mantenimiento</button>
       </nav>
 
       <!-- Main content area -->
