--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -12,7 +12,7 @@
   <!-- Principal -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-    <a href="../index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Inicio</a>
+    <a href="/index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Inicio</a>
   </div>
 
   <!-- Servicios -->
