--- a/cotizacion.html
+++ b/cotizacion.html
@@ -7,6 +7,7 @@
 <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
 <link href="./assets/css/style.css" rel="stylesheet" />
+<data value="JB-CONSTRUCCIONES"></data>
 <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body class="bg-gray-50 font-sans">
