--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JB Constructores - Construcción y Mantenimiento</title>
+    <data value="JB-CONSTRUCCIONES"></data>
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
