--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,34 +1,34 @@
 <aside id="sidebar" 
        class="sidebar bg-black text-white w-64 px-4 py-6 fixed inset-0 h-full z-40 
               transform -translate-x-full transition-transform md:static md:translate-x-0 md:block"
-       style="background-color: rgb(6, 30, 23);">
+       style="background-color: rgb(19, 34, 28);">
 
   <!-- Logo -->
   <div class="flex items-center justify-center mb-8">
-    <img src="../assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES"
+    <img src="JB-CONSTRUCCIONES/assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES"
          class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
   </div>          
 
   <!-- Principal -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-    <a href="/index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Inicio</a>
+    <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Inicio</a>
   </div>
 
   <!-- Servicios -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-    <a href="../Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
-    <a href="../Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
-    <a href="../Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
-    <a href="../Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
-    <a href="../Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Reseñas y Calificaciones</a>
+    <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
+    <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
+    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
+    <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
+    <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Reseñas y Calificaciones</a>
   </div>
 
   <!-- Administrador -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
     <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Gestionar Proyectos</a>
-    <a href="../Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Moderación de Reseñas</a>
+    <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Moderación de Reseñas</a>
   </div>
 </aside>
