--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -14,111 +14,155 @@
   <style>body { font-family:'Roboto',sans-serif; }</style>
 </head>
 
-<body class="bg-teal-50 w-fit min-content">
+<body class="bg-teal-50 w-full min-h-screen overflow-x-hidden">
   <div id="app-container" class="origin-top w-full">
-    <!-- HEADER -->
-<header class="bg-[rgb(240_253_250_/_var(--tw-bg-opacity,1))]">
-
+ <!-- HEADER -->
+    <header class="bg-white border-b-4 border-sky-300 shadow-sm">
       <div class="flex flex-col md:flex-row items-center justify-between px-6 py-4 gap-4">
-        <h1 class="text-2xl font-bold text-teal-700 text-center md:text-left">SIMULA TU COTIZACIÓN</h1>
-        <button onclick="window.location.href='../index.html'" class="px-4 py-2 bg-teal-600 text-white rounded-lg text-base font-semibold hover:bg-teal-700 transition duration-200">
+        <h1 class="text-2xl font-bold text-teal-700 text-center md:text-left">
+          SIMULA TU COTIZACIÓN
+        </h1>
+        <button 
+          onclick="window.location.href='../index.html'" 
+          class="px-4 py-2 bg-teal-600 text-white rounded-lg text-base font-semibold hover:bg-teal-700 transition duration-200"
+        >
           Volver al inicio
         </button>
       </div>
     </header>
 
-    <!-- MAIN -->
-    <main class="flex-1 flex flex-col items-center justify-center p-4 bg-teal-50">
-      <div class="w-full max-w-5xl" style="margin-top: -1.9rem;">
-        <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
+   <!-- MAIN -->
+<main class="flex-1 flex flex-col items-center justify-center p-4 bg-teal-50">
+  <div class="w-full max-w-5xl" style="margin-top: -1.9rem;">
+    <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
 
-    <form id="formCotizacion"
-      class="bg-teal-50 rounded-xl p-[0.2rem] sm:p-[0.2rem] w-[80%] sm:w-[89%] lg:max-w-5xl mx-auto">
+    <form id="formCotizacion" class="contenedor-principal">
 
-          <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
-          <div class="border-2 border-teal-400 rounded-xl p-4 space-y-10 bg-white/70">
+      <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
+      <div class="border-2 border-teal-400 rounded-xl p-4 space-y-10 bg-white">
 
-            <!-- DATOS GENERALES -->
-            <section>
-              <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">Datos Generales</h2>
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <!-- DATOS GENERALES -->
+        <section>
+          <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">Datos Generales</h2>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-                <div>
-                  <label for="nombre" class="block text-teal-800 font-medium mb-2">Cliente</label>
-                  <input type="text" id="nombre" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 placeholder-teal-400" placeholder="Ingresa tu nombre">
-                </div>
-
-                <div>
-                  <label for="tipoDocumento" class="block text-teal-800 font-medium mb-2">Tipo de Documento</label>
-                  <select id="tipoDocumento" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 text-teal-800">
-                    <option value="">Selecciona una opción</option>
-                    <option value="dni">DNI</option>
-                    <option value="cedula">Cédula</option>
-                    <option value="pasaporte">Pasaporte</option>
-                    <option value="otro">Otro</option>
-                  </select>
-                </div>
-
-                <div>
-                  <label for="correo" class="block text-teal-800 font-medium mb-2">Correo Electrónico</label>
-                  <input type="email" id="correo" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 placeholder-teal-400" placeholder="ejemplo@correo.com">
-                </div>
-
-                <div>
-                  <label for="numeroDocumento" class="block text-teal-800 font-medium mb-2">Número de Documento</label>
-                  <input type="text" id="numeroDocumento" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 placeholder-teal-400" placeholder="Ingresa tu número de documento">
-                </div>
-
-                <div>
-                  <label for="ubicacion" class="block text-teal-800 font-medium mb-2">Departamento - Ciudad</label>
-                  <input type="text" id="ubicacion" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 placeholder-teal-400" placeholder="Departamento - Ciudad">
-                </div>
-
-                <div>
-                  <label for="ubicacion2" class="block text-teal-800 font-medium mb-2">Ubicación del Proyecto</label>
-                  <input type="text" id="ubicacion2" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 placeholder-teal-400" placeholder="Dirección">
-                </div>
-
-                <div>
-                  <label for="tipoProyecto" class="block text-teal-800 font-medium mb-2">Tipo de Proyecto</label>
-                  <select id="tipoProyecto" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 text-teal-800">
-                    <option value="">Selecciona una opción</option>
-                    <option value="residencial">Residencial</option>
-                    <option value="comercial">Comercial</option>
-                    <option value="industrial">Industrial</option>
-                    <option value="otros">Otros</option>
-                  </select>
-                </div>
-
-                <div>
-                  <label for="fechaInicio" class="block text-teal-800 font-medium mb-2">Fecha Estimada de Inicio</label>
-                  <input type="date" id="fechaInicio" class="mt-1 block w-full border-teal-200 rounded-md h-12 focus:ring-teal-300 focus:border-teal-300 bg-teal-50 text-teal-800">
-                </div>
-
-                <div class="md:col-span-2">
-                  <label for="descripcion" class="block text-teal-800 font-medium mb-2">Descripción</label>
-                  <textarea id="descripcion" class="mt-1 block w-full border-teal-200 rounded-md focus:ring-teal-400 focus:border-teal-400 bg-teal-50 placeholder-teal-400" rows="3" placeholder="Descripción del trabajo a realizar"></textarea>
-                </div>
-
-              </div>
-            </section>
-
-            <!-- CONTACTO PERSONALIZADO -->
-            <div class="flex flex-col md:flex-row items-center gap-4 bg-teal-50 border border-teal-200 rounded-lg p-6 mt-6">
-              <label for="contactoPersonalizado" class="text-teal-800 font-medium flex-1">
-                ¿Deseas que te contactemos para una valoración personalizada del servicio?
-              </label>
-              <div class="flex items-center gap-2">
-                <input type="checkbox" id="contactoPersonalizado" name="contactoPersonalizado" class="h-5 w-5 text-teal-600 border-teal-400 rounded">
-                <span class="text-teal-700">Sí, deseo ser contactado</span>
-              </div>
-              <button type="button" id="btnAtencionPersonalizada" class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition">Solicitar Atención</button>
+            <div>
+              <input type="text" id="nombre"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Nombre">
             </div>
+
+            <div>
+              <input type="text" id="apellido"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Apellido">
+            </div>
+
+            <div>
+              <select id="tipoDocumento"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+                <option value="">Tipo de Documento</option>
+                <option value="dni">DNI</option>
+                <option value="cedula">Cédula</option>
+                <option value="pasaporte">Pasaporte</option>
+                <option value="otro">Otro</option>
+              </select>
+            </div>
+
+            <div>
+              <input type="text" id="numeroDocumento"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Número de Documento">
+            </div>
+
+            <div>
+              <input type="email" id="correo"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Correo Electrónico">
+            </div>
+
+            <div>
+              <input type="tel" id="contacto"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Número de Contacto">
+            </div>
+
+            <div>
+              <input type="text" id="ubicacion"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Departamento - Ciudad">
+            </div>
+
+            <div>
+              <input type="text" id="ubicacion2"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                placeholder="Dirección del Proyecto">
+            </div>
+
+            <div>
+              <select id="tipoProyecto"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+                <option value="">Tipo de Proyecto</option>
+                <option value="residencial">Residencial</option>
+                <option value="comercial">Comercial</option>
+                <option value="industrial">Industrial</option>
+                <option value="otros">Otros</option>
+              </select>
+            </div>
+
+            <div>
+              <input type="date" id="fechaInicio"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
+                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+            </div>
+
+            <div class="md:col-span-2">
+              <textarea id="descripcion"
+                class="mt-1 block w-full border-2 border-teal-400 rounded-md px-3
+                       text-teal-700 placeholder-teal-500
+                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white"
+                rows="3" placeholder="Descripción del trabajo a realizar"></textarea>
+            </div>
+
+          </div>
+        </section>
+
+        <!-- CONTACTO PERSONALIZADO -->
+        <div
+          class="flex flex-col md:flex-row items-center gap-4 bg-teal-50 border border-teal-200 rounded-lg p-6 mt-6">
+          <label for="contactoPersonalizado" class="text-teal-800 font-medium flex-1">
+            ¿Deseas que te contactemos para una valoración personalizada del servicio?
+          </label>
+          <div class="flex items-center gap-2">
+            <input type="checkbox" id="contactoPersonalizado" name="contactoPersonalizado"
+              class="h-5 w-5 text-teal-600 border-teal-400 rounded focus:ring-teal-300">
+            <span class="text-teal-700">Sí, deseo ser contactado</span>
+          </div>
+        </div>
 
             <!-- SERVICIOS -->
             <section>
-              <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">Selecciona los Servicios y sus m²</h2>
-              <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+              <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">
+                Selecciona los Servicios y sus m²
+              </h2>
+              
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="bg-teal-100 rounded-lg p-6 flex flex-col border-2 border-teal-400">
                   <h3 class="text-teal-700 font-semibold mb-4 text-center">Obra Negra</h3>
                   <div id="obraNegraOpciones" class="space-y-3 flex-1"></div>
@@ -135,6 +179,16 @@
                 </div>
               </div>
             </section>
+
+            <style>
+              /* Todos los inputs numéricos dentro de las tarjetas tendrán 3rem de ancho */
+              #obraNegraOpciones input[type="number"],
+              #obraBlancaOpciones input[type="number"],
+              #mantenimientoOpciones input[type="number"] {
+                width: 3rem;
+                text-align: center;
+              }
+            </style>
 
             <div class="flex justify-center">
               <button type="submit" class="w-full max-w-lg bg-teal-600 text-white px-6 py-3 rounded-md hover:bg-teal-700 transition text-lg font-semibold flex items-center justify-center h-14">
