--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -14,13 +14,13 @@
   <style>body { font-family:'Roboto',sans-serif; }</style>
 </head>
 
-<body class="bg-teal-50 w-full min-h-screen overflow-x-hidden">
+<body class="min-h-screen w-full overflow-x-hidden bg-gradient-to-b from-green-100 via-blue-50 to-blue-100">
   <div id="app-container" class="origin-top w-full">
- <!-- HEADER -->
+    <!-- HEADER -->
     <header class="bg-white border-b-4 border-sky-300 shadow-sm">
       <div class="flex flex-col md:flex-row items-center justify-between px-6 py-4 gap-4">
         <h1 class="text-2xl font-bold text-teal-700 text-center md:text-left">
-          SIMULA TU COTIZACIÓN
+          SIMULADOR DE COTIZACIÓN
         </h1>
         <button 
           onclick="window.location.href='../index.html'" 
@@ -31,11 +31,12 @@
       </div>
     </header>
 
-   <!-- MAIN -->
-<main class="flex-1 flex flex-col items-center justify-center p-4 bg-teal-50">
-  <div class="w-full max-w-5xl" style="margin-top: -1.9rem;">
-    <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
+    <!-- MAIN -->
+    <main class="flex-1 flex flex-col items-center justify-start p-4">
+      <div class="w-full max-w-5xl">
+        <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
 
+        <!-- FORMULARIO -->
     <form id="formCotizacion" class="contenedor-principal">
 
       <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
@@ -49,23 +50,21 @@
             <div>
               <input type="text" id="nombre"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 placeholder="Nombre">
             </div>
 
             <div>
               <input type="text" id="apellido"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 placeholder="Apellido">
             </div>
 
             <div>
               <select id="tipoDocumento"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+                       text-teal-700">
                 <option value="">Tipo de Documento</option>
                 <option value="dni">DNI</option>
                 <option value="cedula">Cédula</option>
@@ -77,47 +76,40 @@
             <div>
               <input type="text" id="numeroDocumento"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
-                placeholder="Número de Documento">
+                       text-teal-700 placeholder-teal-500" placeholder="Número de Documento">
             </div>
 
             <div>
               <input type="email" id="correo"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 placeholder="Correo Electrónico">
             </div>
 
             <div>
               <input type="tel" id="contacto"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 placeholder="Número de Contacto">
             </div>
 
             <div>
               <input type="text" id="ubicacion"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 placeholder="Departamento - Ciudad">
             </div>
 
             <div>
-              <input type="text" id="ubicacion2"
+              <input type="text" id="direccion"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 focus:text-teal-700 bg-white"
-                placeholder="Dirección del Proyecto">
+                       text-teal-700 placeholder-teal-500"placeholder="Dirección del Proyecto">
             </div>
 
             <div>
               <select id="tipoProyecto"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+                       text-teal-700">
                 <option value="">Tipo de Proyecto</option>
                 <option value="residencial">Residencial</option>
                 <option value="comercial">Comercial</option>
@@ -129,14 +121,13 @@
             <div>
               <input type="date" id="fechaInicio"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white">
+                       text-teal-700">
             </div>
 
             <div class="md:col-span-2">
               <textarea id="descripcion"
                 class="mt-1 block w-full border-2 border-teal-400 rounded-md px-3
-                       text-teal-700 placeholder-teal-500
-                       focus:border-teal-500 focus:ring-2 focus:ring-teal-300 bg-white"
+                       text-teal-700 placeholder-teal-500"
                 rows="3" placeholder="Descripción del trabajo a realizar"></textarea>
             </div>
 
