--- a/index.html
+++ b/index.html
@@ -95,36 +95,34 @@
     <button data-tab="mantenimiento">Mantenimiento</button>
   </nav>
 
-      <!-- Main content area -->
-      <main
-        class="flex-1 overflow-y-auto px-6 pb-6" style="margin-top: -0.5rem;">
-        <!-- Secciones ocultas/visibles según pestaña -->
-        <section id="obra-negra" class="tab-content">
-          <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-            Obra Negra
-          </h2>
-          <div id="obra-negra-section" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
-        </section>
+     <main 
+      class="flex-1 w-full flex flex-col items-center justify-start overflow-y-auto px-6 pb-6 rounded-2xl shadow-lg" 
+      style="background-color: #e0f2f1; margin-top: -0.5rem; border-radius: 1.5rem;">
 
-        <section
-          id="obra-blanca"
-          class="tab-content hidden"
-        >
-          <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-            Obra Blanca
-          </h2>
-          <div id="obra-blanca-section" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
-        </section>
+      <!-- Secciones ocultas/visibles según pestaña -->
+      <section id="obra-negra" class="tab-content w-full">
+        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
+          Obra Negra
+        </h2>
+        <div id="obra-negra-section" 
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+      </section>
 
-        <section
-          id="mantenimiento"
-          class="tab-content hidden"
-        >
-          <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-            Mantenimiento
-          </h2>
-          <div id="mantenimiento-section" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
-        </section>
+      <section id="obra-blanca" class="tab-content hidden w-full">
+        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
+          Obra Blanca
+        </h2>
+        <div id="obra-blanca-section" 
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+      </section>
+
+      <section id="mantenimiento" class="tab-content hidden w-full">
+        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
+          Mantenimiento
+        </h2>
+        <div id="mantenimiento-section" 
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+      </section>
       </main>
     </div>
   </div>
